--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "jest": "^28.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.4",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
     "supertest": "^6.2.3"
   }
