added create wallet feature with testcases passing

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "testWithCov": "jest --coverage",
-    "test": "jest",
+    "test": "jest --verbose",
     "start": "nodemon server.js"
   },
   "author": "King David",
