--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
+    "html-pdf": "^3.0.1",
     "jest": "^28.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -22,6 +23,7 @@
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
+    "pdfkit": "^0.13.0",
     "supertest": "^6.2.3"
   }
 }
