--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.16",
     "pdfkit": "^0.13.0",
     "supertest": "^6.2.3"
+  },
+
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
